# Del

./: AGENTS.md  CONTRIBUTING.en.md  CONTRIBUTING.es.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  install.ps1  install.sh
src/: cli.rs  domain.rs  history.rs  main.rs  output.rs  permanent.rs  trash.rs
src/trash/: manager.rs  mod.rs
